[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/mechanics/objective_fix.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 1, 0, 1 )
metallic = 1.0

[sub_resource type="CylinderShape" id=1]

[node name="objective_fix" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00463486, 0, 0.00424671 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="fix_timer" type="Timer" parent="."]
one_shot = true

[node name="objective_timer" type="Timer" parent="."]
one_shot = true

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true

[node name="tween_fix" type="Tween" parent="."]

[node name="tween" type="Tween" parent="."]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.145, 0 )
light_color = Color( 1, 1, 0, 1 )
omni_range = 1.5

[node name="fix" type="Label3D" parent="OmniLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.585388, 0 )
visible = false
text = "Fixing..."

[node name="timing" type="Label3D" parent="OmniLight/fix"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.194931, 0 )
text = "0"

[node name="text" type="Label3D" parent="OmniLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1467, 0 )
text = "Cooling Down!"

[node name="timing" type="Label3D" parent="OmniLight"]
text = "0"

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0583317, 0 )
height = 0.1
material = SubResource( 2 )

[node name="area" type="Area" parent="CSGCylinder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.951369, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="CSGCylinder/area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00175905, 0.00510716, -0.00223994 )
shape = SubResource( 1 )

[connection signal="timeout" from="fix_timer" to="." method="_on_fix_timer_timeout"]
[connection signal="timeout" from="objective_timer" to="." method="_on_objective_timer_timeout"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="body_entered" from="CSGCylinder/area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="CSGCylinder/area" to="." method="_on_area_body_exited"]
